--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>My portfolio</h1>
     <p>There are examples website which I code myself.</p>
     <ol>
-        <li><a href="https://catering-turelyk.netlify.app/">catering</a></li>
-        <li></li>
+        <li><a href="https://catering-turelyk.netlify.app/">Catering</a></li>
+        <li> <a href="https://gamer-heart-free-standard-turelyk.netlify.app/">Game</a> </li>
     </ol>
     
 </body>
