--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <li><a href="https://catering-turelyk.netlify.app/" target="_blank">Catering</a></li>
         <li> <a href="https://gamer-heart-free-standard-turelyk.netlify.app/" target="_blank">Game</a> </li>
     </ol>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, est.</p>
 </body>
 </html>
