--- a/index.html
+++ b/index.html
@@ -5,34 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>My portfolio</h1>
-    <p>There are examples website which I code myself.</p>
-    <ol>
-      <li>
-        <a href="https://luxkraine.000webhostapp.com/" target="_blank"
-          >Learn Luxembourg language</a
-        >
-      </li>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>My portfolio</h1>
+          <p>There are examples website which I code myself.</p>
+          <ol class="list-group w-25">
+            <li>
+              <a
+                class="list-group-item list-group-item-action list-group-item-info"
+                href="https://luxkraine.000webhostapp.com/"
+                target="_blank"
+                >Learn Luxembourg Language &#10142;</a
+              >
+            </li>
 
-      <li>
-        <a href="https://catering-turelyk.netlify.app/" target="_blank"
-          >Catering</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://gamer-heart-free-standard-turelyk.netlify.app/"
-          target="_blank"
-          >Game</a
-        >
-      </li>
-      <li>
-        <a href="https://project-day-turelyk-arsen.netlify.app/" target="_blank"
-          >Dreamshare</a
-        >
-      </li>
-    </ol>
+            <li>
+              <a
+                class="list-group-item list-group-item-action list-group-item-warning"
+                href="https://catering-turelyk.netlify.app/"
+                target="_blank"
+                >Catering &#10142;</a
+              >
+            </li>
+            <li>
+              <a
+                class="list-group-item list-group-item-action list-group-item-info"
+                href="https://gamer-heart-free-standard-turelyk.netlify.app/"
+                target="_blank"
+                >Game &#10142;</a
+              >
+            </li>
+            <li>
+              <a
+                class="list-group-item list-group-item-action list-group-item-warning"
+                href="https://project-day-turelyk-arsen.netlify.app/"
+                target="_blank"
+                >Dreamshare &#10142;</a
+              >
+            </li>
+          </ol>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
