--- a/index.html
+++ b/index.html
@@ -4,62 +4,86 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>My portfolio</h1>
-          <p>There are examples website which I code myself.</p>
-          <ol class="list-group w-25">
+    <header>
+      <div id="header">
+        <div>
+          <img src="" alt="" />
+          <h2>Lorem, ipsum.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
+            ratione.
+          </p>
+        </div>
+        <div>
+          <ul>
             <li>
               <a
-                class="list-group-item list-group-item-action list-group-item-info"
-                href="https://luxkraine.000webhostapp.com/"
+                href="https://www.linkedin.com/in/arsen-turelyk"
                 target="_blank"
-                >Learn Luxembourg Language &#10142;</a
+                >Linkedin</a
               >
-            </li>
-
-            <li>
-              <a
-                class="list-group-item list-group-item-action list-group-item-warning"
-                href="https://catering-turelyk.netlify.app/"
-                target="_blank"
-                >Catering &#10142;</a
-              >
+              <i class="fa-brands fa-linkedin"></i>
             </li>
             <li>
-              <a
-                class="list-group-item list-group-item-action list-group-item-info"
-                href="https://gamer-heart-free-standard-turelyk.netlify.app/"
-                target="_blank"
-                >Game &#10142;</a
+              <a href="https://github.com/turelyk-arsen" target="_blank"
+                >GitHub</a
               >
+              <i class="fa-brands fa-github"></i>
             </li>
             <li>
-              <a
-                class="list-group-item list-group-item-action list-group-item-warning"
-                href="https://project-day-turelyk-arsen.netlify.app/"
-                target="_blank"
-                >Dreamshare &#10142;</a
-              >
+              <a href="mailto:arsen.turelyk@gmail.com" target="_blank">Email</a>
+              <i class="fa-sharp fa-regular fa-envelope"></i>
             </li>
-          </ol>
+          </ul>
         </div>
       </div>
-    </div>
+    </header>
+
+    <main>
+      <article>
+        <h2>Lorem, ipsum. lorem</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ad
+          eos fuga natus consectetur dolorum.
+        </p>
+      </article>
+      <section>
+        <div class="grid-item item1">
+          <a href="https://catering-turelyk.netlify.app/" target="_blank"
+            ><img src="img/hamburger.jpg" alt=""
+          /></a>
+        </div>
+        <div class="grid-item item2">
+          <a
+            href="https://gamer-heart-free-standard-turelyk.netlify.app/"
+            target="_blank"
+            ><img src="img/game.jpg"
+          /></a>
+        </div>
+        <div class="grid-item item3">
+          <a target="_blank" href="https://luxkraine.000webhostapp.com/">
+            <img src="img/luxcrain.jpg" alt="" />
+          </a>
+        </div>
+        <div class="grid-item item4">
+          <a
+            href="https://project-day-turelyk-arsen.netlify.app/"
+            target="_blank"
+            ><img src="img/header.png" alt=""
+          /></a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
