--- a/index.html
+++ b/index.html
@@ -60,28 +60,22 @@
       </article>
       <section>
         <div class="grid-item item1">
-          <a href="https://catering-turelyk.netlify.app/" target="_blank"
-            ><img src="img/hamburger.jpg" alt=""
-          /></a>
+          <a href="https://catering-turelyk.netlify.app/" target="_blank">Go online <i class="fa-solid fa-globe"></i></a>
         </div>
         <div class="grid-item item2">
           <a
             href="https://gamer-heart-free-standard-turelyk.netlify.app/"
             target="_blank"
-            ><img src="img/game.jpg"
-          /></a>
+          >Go online <i class="fa-solid fa-globe"></i></a>
         </div>
         <div class="grid-item item3">
-          <a target="_blank" href="https://luxkraine.000webhostapp.com/">
-            <img src="img/luxcrain.jpg" alt="" />
-          </a>
+          <a target="_blank" href="https://luxkraine.000webhostapp.com/"> Go online <i class="fa-solid fa-globe"></i></a>
         </div>
         <div class="grid-item item4">
           <a
             href="https://project-day-turelyk-arsen.netlify.app/"
             target="_blank"
-            ><img src="img/header.png" alt=""
-          /></a>
+          > Go online <i class="fa-solid fa-globe"></i> </a>
         </div>
       </section>
     </main>
