--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
             target="_blank"
           > Go online <i class="fa-solid fa-globe"></i> </a>
         </div>
+        <div class="grid-item item5">
+          <a
+            href="https://project-day-turelyk-arsen.netlify.app/"
+            target="_blank"
+          > Go online <i class="fa-solid fa-globe"></i> </a>
+        </div>
       </section>
     </main>
   </body>
