--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
       <div id="header">
         <div>
           <img src="" alt="" />
-          <h2>Lorem, ipsum.</h2>
+          <h2>Arsen Turelyk</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
-            ratione.
+            Hello everyone and welcome to my presentation! 
           </p>
         </div>
         <div>
@@ -52,38 +51,45 @@
 
     <main>
       <article>
-        <h2>Lorem, ipsum. lorem</h2>
+        <h2>My website</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ad
-          eos fuga natus consectetur dolorum.
+          Here you can visit
+            some of the web pages I have created.
         </p>
       </article>
       <section>
         <div class="grid-item item1">
-          <a href="https://catering-turelyk.netlify.app/" target="_blank">Go online <i class="fa-solid fa-globe"></i></a>
+          <a href="https://catering-turelyk.netlify.app/" target="_blank"
+            >Go online <i class="fa-solid fa-globe"></i
+          ></a>
         </div>
         <div class="grid-item item2">
           <a
             href="https://gamer-heart-free-standard-turelyk.netlify.app/"
             target="_blank"
-          >Go online <i class="fa-solid fa-globe"></i></a>
+            >Go online <i class="fa-solid fa-globe"></i
+          ></a>
         </div>
         <div class="grid-item item3">
-          <a target="_blank" href="https://luxkraine.000webhostapp.com/"> Go online <i class="fa-solid fa-globe"></i></a>
+          <a target="_blank" href="https://luxkraine.000webhostapp.com/">
+            Go online <i class="fa-solid fa-globe"></i
+          ></a>
         </div>
         <div class="grid-item item4">
           <a
             href="https://project-day-turelyk-arsen.netlify.app/"
             target="_blank"
-          > Go online <i class="fa-solid fa-globe"></i> </a>
+          >
+            Go online <i class="fa-solid fa-globe"></i>
+          </a>
         </div>
         <div class="grid-item item5">
-          <a
-            href="https://project-day-turelyk-arsen.netlify.app/"
-            target="_blank"
-          > Go online <i class="fa-solid fa-globe"></i> </a>
+          <a href="https://evaluationday-htmlcss.netlify.app/" target="_blank">
+            Go online <i class="fa-solid fa-globe"></i>
+          </a>
         </div>
       </section>
     </main>
+
   </body>
 </html>
