--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <div>
           <img src="" alt="" />
           <h2>Arsen Turelyk</h2>
-          <p>
-            Hello everyone and welcome to my presentation! 
-          </p>
+          <p>Hello everyone and welcome to my presentation!</p>
         </div>
         <div>
           <ul>
@@ -52,27 +50,24 @@
     <main>
       <article>
         <h2>My website</h2>
-        <p>
-          Here you can visit
-            some of the web pages I have created.
-        </p>
+        <p>Here you can visit some of the web pages I have created.</p>
       </article>
       <section>
         <div class="grid-item item1">
           <a href="https://catering-turelyk.netlify.app/" target="_blank"
-            >Go online <i class="fa-solid fa-globe"></i
+            >OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
         <div class="grid-item item2">
           <a
             href="https://gamer-heart-free-standard-turelyk.netlify.app/"
             target="_blank"
-            >Go online <i class="fa-solid fa-globe"></i
+            >OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
         <div class="grid-item item3">
           <a target="_blank" href="https://luxkraine.000webhostapp.com/">
-            Go online <i class="fa-solid fa-globe"></i
+            OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
         <div class="grid-item item4">
@@ -80,16 +75,20 @@
             href="https://project-day-turelyk-arsen.netlify.app/"
             target="_blank"
           >
-            Go online <i class="fa-solid fa-globe"></i>
+          OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
         <div class="grid-item item5">
+          <a href="https://layout-bonus-exercice.netlify.app/" target="_blank">
+            OK <i class="fa-solid fa-globe"></i>
+          </a>
+        </div>
+        <div class="grid-item item6">
           <a href="https://evaluationday-htmlcss.netlify.app/" target="_blank">
-            Go online <i class="fa-solid fa-globe"></i>
+            OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
       </section>
     </main>
-
   </body>
 </html>
