--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             href="https://project-day-turelyk-arsen.netlify.app/"
             target="_blank"
           >
-          OK <i class="fa-solid fa-globe"></i>
+            OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
         <div class="grid-item item5">
@@ -85,6 +85,11 @@
         </div>
         <div class="grid-item item6">
           <a href="https://evaluationday-htmlcss.netlify.app/" target="_blank">
+            OK <i class="fa-solid fa-globe"></i>
+          </a>
+        </div>
+        <div class="grid-item item8">
+          <a href="https://cook-myportfolio.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
