--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -93,7 +99,16 @@
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
+        <div class="grid-item item9">
+          <p id="message9">Page was created in <span>jQuery</span></p>
+          <a href="https://project-days-jquery.netlify.app/" target="_blank">
+            OK <i class="fa-solid fa-globe"></i>
+          </a>
+        </div>
       </section>
     </main>
+
+    <script src="script/jquery-3.6.3-min.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
