--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
+          <div class="grid-item item7">
+          <p id="message7">Page was created in <span>jQuery</span></p>
+          <a href="https://8-jquery-actors-project.netlify.app/" target="_blank">
+            OK <i class="fa-solid fa-globe"></i>
+          </a>
+        </div>
         <div class="grid-item item8">
           <a href="https://cook-myportfolio.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
@@ -105,6 +111,7 @@
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
+
       </section>
     </main>
 
