--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
           </a>
         </div>
 
+        <div class="grid-item item10">
+          <p id="message10">Page was created with <span>API</span></p>
+          <a href="https://project-days-jquery.netlify.app/" target="_blank">
+            OK <i class="fa-solid fa-globe"></i>
+          </a>
+        </div>
+
       </section>
     </main>
 
