--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="grid-item item10">
           <p id="message10">Page was created with <span>API</span></p>
-          <a href="https://project-days-jquery.netlify.app/" target="_blank">
+          <a href="https://api-ajax-exercise.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
