--- a/index.html
+++ b/index.html
@@ -24,12 +24,43 @@
     <header>
       <div id="header">
         <div>
-          <img src="" alt="" />
           <h2>Arsen Turelyk</h2>
-          <p>Hello everyone and welcome to my presentation!</p>
+          <p>
+            Hello everyone and welcome to my presentation! My name is Arsen and
+            I'm excited to have the opportunity to share my journey with you.
+            Originally from Ukraine, I relocated to Luxembourg in pursuit of a
+            career in web development. I've always been passionate about
+            technology and the way it can be used to solve problems and make
+            people's lives easier.
+          </p>
+          <p>
+            After completing my education in Full Stack Developer course
+            organized by ADEM , I decided to pursue a career in web development
+            and began studying intensively to enhance my skills in both
+            front-end and back-end development. I'm a driven individual who is
+            constantly seeking out new challenges and opportunities to learn and
+            grow. In my free time, I enjoy experimenting with new technologies
+            and building projects to apply what I've learned.
+          </p>
+          <p>
+            I'm excited to share my experiences with you and provide insights
+            into what I've learned on my journey to becoming a full stack
+            developer. Thank you for being here and I hope you find my
+            presentation informative and engaging.
+          </p>
         </div>
         <div>
+          <img src="img/Photo.jpg"/>
+
           <ul>
+            <li>
+              <a
+                href="https://cv-turelyk-arsen.netlify.app/"
+                target="_blank"
+                >Curriculum vitae (CV)</a
+              >
+              <i class="fa-regular fa-file"></i>
+            </li>
             <li>
               <a
                 href="https://www.linkedin.com/in/arsen-turelyk"
@@ -94,9 +125,12 @@
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
-          <div class="grid-item item7">
+        <div class="grid-item item7">
           <p id="message7">Page was created in <span>jQuery</span></p>
-          <a href="https://8-jquery-actors-project.netlify.app/" target="_blank">
+          <a
+            href="https://8-jquery-actors-project.netlify.app/"
+            target="_blank"
+          >
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
@@ -111,7 +145,6 @@
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
-
       </section>
     </main>
 
