--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@
             OK <i class="fa-solid fa-globe"></i>
           </a>
         </div>
-
+        <div class="grid-item item10">
+          <p id="message10">Page was created in <span>API</span></p>
+          <a href="https://api-ajax-exercise.netlify.app/" target="_blank">
+            OK <i class="fa-solid fa-globe"></i>
+          </a>
+        </div>
       </section>
     </main>
 
