--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             technology and the way it can be used to solve problems and make
             people's lives easier.
           </p>
+          <img id="fotoMobile" src="img/Photo.jpg"/>
           <p>
             After completing my education in Full Stack Developer course
             organized by ADEM , I decided to pursue a career in web development
@@ -50,15 +51,16 @@
           </p>
         </div>
         <div>
-          <img src="img/Photo.jpg"/>
+          <img id="fotoTablet" src="img/Photo.jpg"/>
 
           <ul>
             <li>
               <a
                 href="https://cv-turelyk-arsen.netlify.app/"
                 target="_blank"
-                >Curriculum vitae (CV)</a
+                >CV&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a
               >
+              <a href="23.03.2023.pdf"><i class="fa-solid fa-download"></i></a>
               <i class="fa-regular fa-file"></i>
             </li>
             <li>
@@ -121,6 +123,7 @@
           </a>
         </div>
         <div class="grid-item item6">
+          <p id="message6">My evaluation on the <br><span>Full Stack Developer course</span></p>
           <a href="https://evaluationday-htmlcss.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
           </a>
