--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 target="_blank"
                 >CV</a
               >
-               <a href="23.03.2023.pdf"><i class="fa-solid fa-download"></i></a>
+               <a href="pdf/CV_Turelyk_Arsen_23_03_2023.pdf"><i class="fa-solid fa-download"></i></a>
             </li>
             <li>
               <a
