--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             </li>
             <li>
               <a
+                href="#"                
+                >Cover letter</a
+              >
+               <a href="pdf/Cover Letter (3).pdf"><i class="fa-solid fa-download"></i></a>
+            </li>
+            <li>
+              <a
                 href="https://www.linkedin.com/in/arsen-turelyk"
                 target="_blank"
                 >Linkedin</a
