--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </li>
             <li>
               <a
-                href="#"                
+                href="pdf/Cover Letter (3).pdf"                
                 >Cover letter</a
               >
                <a href="pdf/Cover Letter (3).pdf"><i class="fa-solid fa-download"></i></a>
