27/05/2023 add laravel social network project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             technology and the way it can be used to solve problems and make
             people's lives easier.
           </p>
-          <img id="fotoMobile" src="img/Photo.jpg"/>
+          <img id="fotoMobile" src="img/Photo.jpg" />
           <p>
             After completing my education in Full Stack Developer course
             organized by ADEM , I decided to pursue a career in web development
@@ -51,23 +51,22 @@
           </p>
         </div>
         <div>
-          <img id="fotoTablet" src="img/Photo.jpg"/>
+          <img id="fotoTablet" src="img/Photo.jpg" />
 
           <ul>
             <li>
-              <a
-                href="https://cv-turelyk-arsen.netlify.app/"
-                target="_blank"
+              <a href="https://cv-turelyk-arsen.netlify.app/" target="_blank"
                 >CV</a
               >
-               <a href="pdf/CV_Turelyk_Arsen_23_03_2023.pdf"><i class="fa-solid fa-download"></i></a>
+              <a href="pdf/CV_Turelyk_Arsen_23_03_2023.pdf"
+                ><i class="fa-solid fa-download"></i
+              ></a>
             </li>
             <li>
-              <a
-                href="pdf/Cover Letter (3).pdf"                
-                >Cover letter</a
-              >
-               <a href="pdf/Cover Letter (3).pdf"><i class="fa-solid fa-download"></i></a>
+              <a href="pdf/Cover Letter (3).pdf">Cover letter</a>
+              <a href="pdf/Cover Letter (3).pdf"
+                ><i class="fa-solid fa-download"></i
+              ></a>
             </li>
             <li>
               <a
@@ -99,16 +98,14 @@
       </article>
       <section>
         <div class="grid-item item1">
-          <a href="https://catering-turelyk.netlify.app/" target="_blank"
-            >OK <i class="fa-solid fa-globe"></i
-          ></a>
-        </div>
-        <div class="grid-item item2">
-          <a
-            href="https://gamer-heart-free-standard-turelyk.netlify.app/"
-            target="_blank"
-            >OK <i class="fa-solid fa-globe"></i
-          ></a>
+          <!-- width="560" height="415" -->
+          <iframe
+            src="https://www.youtube.com/embed/Wkf6YCRySmQ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
         <div class="grid-item item3">
           <a target="_blank" href="https://luxkraine.000webhostapp.com/">
@@ -129,7 +126,9 @@
           </a>
         </div>
         <div class="grid-item item6">
-          <p id="message6">My evaluation on the <br><span>Full Stack Developer course</span></p>
+          <p id="message6">
+            My evaluation on the <br /><span>Full Stack Developer course</span>
+          </p>
           <a href="https://evaluationday-htmlcss.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
           </a>
@@ -159,6 +158,18 @@
           <a href="https://api-ajax-exercise.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
           </a>
+        </div>
+        <div class="grid-item item11">
+          <a href="https://catering-turelyk.netlify.app/" target="_blank"
+            >OK <i class="fa-solid fa-globe"></i
+          ></a>
+        </div>
+        <div class="grid-item item12">
+          <a
+            href="https://gamer-heart-free-standard-turelyk.netlify.app/"
+            target="_blank"
+            >OK <i class="fa-solid fa-globe"></i
+          ></a>
         </div>
       </section>
     </main>
