--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>Here you can visit some of the web pages I have created.</p>
       </article>
       <section>
-        <div class="grid-item item1">
+        <div class="grid-item item1 item">
           <!-- width="560" height="415" -->
           <iframe
             src="https://www.youtube.com/embed/Wkf6YCRySmQ"
@@ -158,6 +158,15 @@
           <a href="https://api-ajax-exercise.netlify.app/" target="_blank">
             OK <i class="fa-solid fa-globe"></i>
           </a>
+        </div>
+        <div class="grid-item item item2">
+          <iframe
+            src="https://www.youtube.com/embed/Dtms0CKJX0o"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
         <div class="grid-item item11">
           <a href="https://catering-turelyk.netlify.app/" target="_blank"
