07/06/2023 add react site

--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
             >OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
+        <div class="grid-item item13">
+          <a
+            href="https://eloquent-cendol-c896f4.netlify.app/"
+            target="_blank"
+            >OK <i class="fa-solid fa-globe"></i
+          ></a>
+        </div>
       </section>
     </main>
 
