--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@
             >OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
+        <div class="grid-item item15">
+          <a
+            href="https://gamer-heart-free-standard-turelyk.netlify.app/"
+            target="_blank"
+            >OK <i class="fa-solid fa-globe"></i
+          ></a>
+        </div>
 
       </section>
     </main>
