--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
       referrerpolicy="no-referrer"
     />
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7EHDWC5CG7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7EHDWC5CG7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-7EHDWC5CG7');
-</script>
+      gtag("config", "G-7EHDWC5CG7");
+    </script>
   </head>
   <body>
     <header>
@@ -117,9 +122,7 @@
           ></iframe>
         </div>
         <div class="grid-item item13">
-          <a
-            href="https://eloquent-cendol-c896f4.netlify.app/"
-            target="_blank"
+          <a href="https://eloquent-cendol-c896f4.netlify.app/" target="_blank"
             >OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
@@ -210,10 +213,21 @@
             >OK <i class="fa-solid fa-globe"></i
           ></a>
         </div>
-
+        <div class="grid-item item item16">
+          <div class="grid-item item item2">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/V-Z0a4_HHtA"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
       </section>
     </main>
-
     <script src="script/jquery-3.6.3-min.js"></script>
     <script src="script/script.js"></script>
   </body>
