--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
               <a href="mailto:arsen.turelyk@gmail.com" target="_blank">Email</a>
               <i class="fa-sharp fa-regular fa-envelope"></i>
             </li>
+            <li>
+              <a href="https://turelyk-arsen-portfolio-react.netlify.app/" target="_blank">Portfolio React</a>
+            </li>
           </ul>
         </div>
       </div>
