--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <i class="fa-sharp fa-regular fa-envelope"></i>
             </li>
             <li>
-              <a href="https://turelyk-arsen-portfolio-react.netlify.app/" target="_blank">Portfolio React</a>
+              <a href="https://turelyk-arsen-portfolio-react.netlify.app/" target="_blank">New Portfolio React</a>
             </li>
           </ul>
         </div>
